Fixed fonts and spacing

--- a/stylesheets/sass/components/_hero1.scss
+++ b/stylesheets/sass/components/_hero1.scss
@@ -1,4 +1,4 @@
-//HERO 1 SASS CODE
+//HERO 1 SASS
 
 
 h1{
@@ -20,11 +20,11 @@ h2{
   position: fixed;
   letter-spacing: .1em;
   top: 33%;
-  left: 35.6%;
+  left: 39%;
 
   color: #000;
-  font-family: "Kiona";
-  font-size: 17px;
+  font-family: "Veranda";
+  font-size: 19px;
 }
 
 .break{
