--- a/stylesheets/sass/components/_hero2.scss
+++ b/stylesheets/sass/components/_hero2.scss
@@ -11,7 +11,7 @@
   height: 100px;
   width: auto;
   top: 40%;
-  left: 40%;
+  left: 50%;
 }
 
 p1{
@@ -20,11 +20,11 @@ p1{
   position: fixed;
   letter-spacing: .1em;
   top: 75%;
-  left: 10%;
+  left: 19%;
 
   color: #000;
-  font-family: "Kiona";
-  font-size: 17px;
+  font-family: "Veranda";
+  font-size: 16px;
 }
 
 .food{
@@ -38,7 +38,7 @@ p1{
   height: 100px;
   width: auto;
   top: 26.5%;
-  left: 142%;
+  left: 128%;
 }
 
 p2{
@@ -47,9 +47,9 @@ p2{
   position: fixed;
   letter-spacing: .1em;
   top: 75%;
-  left: 60%;
+  left: 58%;
 
   color: #000;
-  font-family: "Kiona";
-  font-size: 17px;
+  font-family: "Veranda";
+  font-size: 16px;
 }
